<?xml version="1.0" encoding="UTF-8"?>
<!--
     Copyright (C) 2014-2016 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="status_bar_settings"
    android:title="@string/status_bar_title">

    <PreferenceCategory
        android:key="pref_category_indicators"
        android:title="@string/misc">

    <ListPreference
        android:key="status_bar_weather"
        android:title="@string/statusbar_weather_title"
        android:dialogTitle="@string/statusbar_weather_dialog_title"
        android:entries="@array/status_bar_weather_entries"
        android:entryValues="@array/status_bar_weather_values" />

    <Preference
        android:key="traffic"
        android:fragment="org.cyanogenmod.cmparts.input.Traffic"
        android:title="@string/traffic_category" />

    <PreferenceScreen
        android:key="ticker"
        android:title="@string/ticker_screen_title"
        android:fragment="org.cyanogenmod.cmparts.input.Ticker" />

    <cyanogenmod.preference.CMSystemSettingListPreference
        android:key="qs_quick_pulldown"
        android:title="@string/status_bar_quick_qs_pulldown_title"
        android:entries="@array/status_bar_quick_qs_pulldown_entries"
        android:entryValues="@array/status_bar_quick_qs_pulldown_values"
        android:defaultValue="0" />

    <cyanogenmod.preference.CMSystemSettingSwitchPreference
        android:key="status_bar_brightness_control"
        android:title="@string/status_bar_toggle_brightness"
        android:summary="@string/status_bar_toggle_brightness_summary"
        android:defaultValue="false" />

    <cyanogenmod.preference.SystemSettingSwitchPreference
        android:key="show_su_indicator"
        android:title="@string/su_indicator"
        android:summaryOn="@string/su_indicator_summary_on"
        android:summaryOff="@string/su_indicator_summary_off"
        android:defaultValue="false" />

    <cyanogenmod.preference.SystemSettingSwitchPreference
        android:key="show_fourg"
        android:title="@string/show_fourg_title"
        android:summary="@string/show_fourg_summary"
        android:defaultValue="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_icons_title">

        <cyanogenmod.preference.CMSystemSettingSwitchPreference
            android:key="status_bar_notif_count"
            android:title="@string/status_bar_notif_count_title"
            android:summary="@string/status_bar_notif_count_summary"
            android:defaultValue="true" />

        <PreferenceScreen
            android:key="status_bar_icons"
            android:title="@string/status_bar_system_icons_title"
            android:summary="@string/status_bar_system_icons_summary">
            <intent
                android:action="android.intent.action.MAIN"
                android:targetPackage="com.android.systemui"
                android:targetClass="com.android.systemui.tuner.TunerActivity">
                <extra android:name="tuner" android:value="status_bar" />
            </intent>
        </PreferenceScreen>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_clock_title">

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_clock"
            android:title="@string/status_bar_clock_position_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_clock_position_title"
            android:entries="@array/status_bar_clock_position_entries"
            android:entryValues="@array/status_bar_clock_position_values"
            android:defaultValue="0" />

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_am_pm"
            android:title="@string/status_bar_am_pm_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_am_pm_title"
            android:entries="@array/status_bar_am_pm_entries"
            android:entryValues="@array/status_bar_am_pm_values"
            android:defaultValue="2" />
            
        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_date"
            android:title="@string/status_bar_date_title"
            android:dialogTitle="@string/status_bar_date_title"
            android:entries="@array/status_bar_date_entries"
            android:entryValues="@array/status_bar_date_values"
            android:persistent="false" />

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_date_style"
            android:title="@string/status_bar_date_style"
            android:dialogTitle="@string/status_bar_date_style"
            android:entries="@array/status_bar_date_style_entries"
            android:entryValues="@array/status_bar_date_style_values"
            android:persistent="false" />

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="clock_date_position"
            android:title="@string/clock_date_position"
            android:dialogTitle="@string/clock_date_position"
            android:entries="@array/clock_date_position_entries"
            android:entryValues="@array/clock_date_position_values"
            android:persistent="false" />

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_date_format"
            android:title="@string/status_bar_date_format_title"
            android:dialogTitle="@string/status_bar_date_format_title"
            android:entries="@array/status_bar_date_format_entries_values"
            android:entryValues="@array/status_bar_date_format_entries_values"
            android:persistent="false" />

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="font_style"
            android:title="@string/clock_font_style_title"
            android:dialogTitle="@string/clock_font_style_title"
            android:entries="@array/clock_font_style_entries"
            android:entryValues="@array/clock_font_style_values"
            android:persistent="false" />

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_clock_font_size"
            android:title="@string/clock_font_size_title"
            android:dialogTitle="@string/clock_font_style_title"
            android:entries="@array/clock_font_size_entries"
            android:entryValues="@array/clock_font_size_values"
            android:persistent="false" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/status_bar_battery_title">

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_battery_style"
            android:title="@string/status_bar_battery_style_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_style_title"
            android:entries="@array/status_bar_battery_style_entries"
            android:entryValues="@array/status_bar_battery_style_values"
            android:defaultValue="2" />

        <cyanogenmod.preference.CMSystemSettingListPreference
            android:key="status_bar_show_battery_percent"
            android:title="@string/status_bar_battery_percentage_title"
            android:summary="%s"
            android:dialogTitle="@string/status_bar_battery_percentage_title"
            android:entries="@array/status_bar_battery_percentage_entries"
            android:entryValues="@array/status_bar_battery_percentage_values"
            android:defaultValue="0" />


    	<PreferenceScreen
            android:key="battery_bar"
            android:title="@string/battery_bar_title"
            android:fragment="org.cyanogenmod.cmparts.input.BatteryBar" />

    </PreferenceCategory>

</PreferenceScreen>
